spl/tests/compile_fail/wrong_category_program_override.stderr
error: `... = token_program` — field `token_program` is `Program<TokenProgram>`, expected one of: Program<SystemProgram>
  --> tests/compile_fail/wrong_category_program_override.rs:13:5
   |
13 | /     #[account(
14 | |         init,
15 | |         associated_token(
16 | |             mint = mint,
...  |
20 | |     )]
21 | |     pub ata: InterfaceAccount<Token>,
   | |____________________________________^
